--- a/package.json
+++ b/package.json
@@ -8,10 +8,10 @@
 		"start": "npm-run-all --parallel watch:sass",
 		"compile:sass": "sass sass/main.scss css/style.comp.css",
 		"prefix:css": "postcss --use autoprefixer -b 'last 10 versions' css/style.comp.css -o css/style.prefix.css",
-		"compress:css": "sass css/style.prefix.css css/style.css --output-style compressed",
-		"build:css": "npm-run-all compile:sass comp:css prefix:css compress:css"
+		"compress:css": "sass -s compressed css/style.prefix.css css/style.css",
+		"build:css": "npm-run-all compile:sass prefix:css compress:css"
 	},
-	"author": "Jonas",
+	"author": "Ashfaque Amin",
 	"license": "ISC",
 	"devDependencies": {
 		"autoprefixer": "^10.4.21",
