--- a/package.json
+++ b/package.json
@@ -16,7 +16,10 @@
 	"devDependencies": {
 		"autoprefixer": "^10.4.21",
 		"concat": "^1.0.3",
+		"cssnano": "^7.1.1",
+		"html-minifier-terser": "^7.2.0",
 		"npm-run-all": "^4.1.5",
+		"postcss": "^8.5.6",
 		"postcss-cli": "^11.0.1",
 		"sass": "^1.91.0"
 	},
